--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,34 @@
   <meta charset="utf-8">
   <title>Crops Prediction</title>
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+  <script>
+    $(document).ready(function() {
+      validate();
+      $('input').on('keyup', validate);
+    });
+
+    function validate() {
+      var inputsWithValues = 0;
+
+      // get all input fields except for type='submit'
+      var myInputs = $("input:not([type='submit'])");
+
+      myInputs.each(function(e) {
+        // if it has a value, increment the counter
+        if ($(this).val()) {
+          inputsWithValues += 1;
+        }
+      });
+
+      if (inputsWithValues == myInputs.length) {
+        $("input[type=submit]").prop("disabled", false);
+      } else {
+        $("input[type=submit]").prop("disabled", true);
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -50,40 +78,40 @@
               <form id="stripe-login" method="post">
                 <div class="field padding-bottom--24">
                   <label for="n">Nitrogen Content in the Soil:</label>
-                  <input type="text" name="n">
+                  <input type="number" name="n">
                 </div>
                 <div class="field padding-bottom--24">
                   <label for="p">Phosphorus Content in the Soil:</label>
-                  <input type="text" name="p">
+                  <input type="number" name="p">
                 </div>
                 <div class="field padding-bottom--24">
                   <label for="k">Potassium Content in the Soil:</label>
-                  <input type="text" name="k">
+                  <input type="number" name="k">
                 </div>
                 <div class="field padding-bottom--24">
                   <label for="ph">PH Value of the Soil:</label>
-                  <input type="text" name="ph">
+                  <input type="number" name="ph">
                 </div>
                 <div class="field padding-bottom--24">
                   <label for="temp">Temperature of the Area:</label>
-                  <input type="text" name="temp">
+                  <input type="number" name="temp">
                 </div>
                 <div class="field padding-bottom--24">
                   <label for="humid">Humidity of the Area:</label>
-                  <input type="text" name="humid">
+                  <input type="number" name="humid">
                 </div>
                 <div class="field padding-bottom--24">
                   <label for="rain">Rainfall in the Area:</label>
-                  <input type="text" name="rain">
+                  <input type="number" name="rain">
                 </div>
                 <div class="field padding-bottom--24">
-                  <input type="submit" name="submit" value="Predict">
+                  <input type="submit" id="submit" name="submit" value="Predict">
                 </div>
               </form>
               {% if prediction %}
               <span class="padding-bottom--15">These conditions match for the growth of:</span>
               {% for crop in prediction %}
-              <p>{{ prediction }}</p>
+              <p style="font-size:30px; color:blue;text-transform:uppercase;"><b>{{ crop }}</b></p>
               {% endfor %}
               {% endif %}
             </div>
@@ -96,5 +124,4 @@
     </div>
   </div>
 </body>
-
 </html>
